[package]
name = "trackr"
version = "0.1.0"
authors = ["Alex Culliere <nachasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18", features = ["xlib"] }
tui = { version = "0.9", features = ["crossterm"] }
crossterm = "0.17.5"
tokio = { version = "0.2", features = ["full"] }