[package]
name = "trackr"
version = "0.1.0"
authors = ["Alex Culliere <nachasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18", features = ["xlib"] }
tui = { version = "0.9", features = ["crossterm"] }
tokio = { version = "0.2", features = ["full"] }
rustbreak = { version = "2.0.0-rc3", features = ["bin_enc"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.17.5"
lazy_static = "1.4.0"
chrono = "0.4.11"
directories = "3.0.0"