[package]
name = "trackr"
version = "0.1.0"
authors = ["Alex Culliere <nachasic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18", features = ["xlib"] }
tui = { version = "0.9", features = ["crossterm"] }
tokio = { version = "1.8", features = ["full"] }
# rustbreak = { version = "2.0.0-rc3", features = ["bin_enc"] }
rustbreak = { git = "https://github.com/TheNeikos/rustbreak.git", features = ["bin_enc"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
crossterm = "0.17.5"
lazy_static = "1.4.0"
chrono = "0.4.12"
directories = "3.0.0"
toml = "0.5.6"